# crewai-tutor-agents

./: .dockerignore  .env-template  .gitignore  Dockerfile  LICENSE  Makefile  README.md  deploy.sh  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.ipynb_checkpoints/: docker-compose-checkpoint.yml
app/: SADA  api.py  main.py  settings.py  test.py  test_structured_output.py
app/api/: api.py
app/config/chill_config/: agents.yaml
app/config/finances_config/: agents.yaml  tasks.yaml
app/config/hair_diagno_config/: agents.yaml  tasks.yaml
app/crews/chill_crew/: chill_crew.py
app/crews/diagno_crew/: diagno_crew.py
app/crews/financial_crew/: financial_crew.py  models.py
app/flow/: main.py
app/flow/crews/config/: agents.yaml  tasks.yaml
app/flow/crews/financial_crew/: financial_crew.py
app/test_crew/: main.py
app/tools/diagnostic_crew/: tools.py
app/tools/financial_crew/: tool.ipynb  tool.py
app/utils/: image_utils.py  list_agents.py
app/utils/websockets/: __init__.py  manager.py
notebooks/mauro_notebook/: _crew.ipynb  diagnostic_crew.ipynb
notebooks/saul_notebook/: _crew.ipynb  _crwe.ipynb
notebooks/saul_notebook/config/: tasks.yaml
